<resources>
    <string name="facebook_app_id" translatable="false">0000000000000000</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb0000000000000000</string>
    <string name="stripe_publish_key" translatable="false">pk_0000_000000000000000000000000</string>
    <string name="admob_ads_api_key" translatable="false">ca-app-pub-0000000000000000~0000000000</string>
    <string name="admob_banner_ads_key" translatable="false">ca-app-pub-0000000000000000/0000000000</string>
    <string name="google_map_api_key" translatable="false">AIzaSyDOnWkzTvVgQPJ1ZEG1XMzea3ZaBouQ9Mk</string>
    <string name="deep_link">192.168.1.103</string>
    <string name="app__app_name">فیروز بورد</string>
    <string name="app__ok">بله</string>
    <string name="app__cancel">لغو</string>
    <string name="app__drawer_open">Drawer Open</string>
    <string name="app__drawer_close">Drawer Close</string>
    <string name="register__user_name">نام کاربری</string>
    <string name="register__email">شماره تلفن</string>
    <string name="register__password">رمز عبور</string>
    <string name="register__password_again">تکرار رمز عبور</string>
    <string name="register__back_to_login">در حال حاضر حساب کاربری ای دارید؟ ورود</string>
    <string name="register__register">ثبت نام</string>
    <string name="register__new_account">ساخت یک حساب جدید</string>
    <string name="forgot_password__title">بازیابی رمز عبور</string>
    <string name="forgot_password__email">شماره تلفن</string>
    <string name="forgot_password__back_to_login">در حال حاضر حساب کاربری ای دارید؟ ورود</string>
    <string name="forgot_password__password_recovery">بازیابی رمز عبور</string>
    <string name="forgot_password__save">ذخیره</string>
    <string name="forgot_password__send">ارسال</string>
    <string name="password_change__password">رمز عبور</string>
    <string name="password_change__save">ذخیره</string>
    <string name="password_change__confirm_password">تایید رمز عبور</string>
    <string name="password_change__password_change">تغییر رمز عبور</string>
    <string name="login__email">شماره تلفن</string>
    <string name="login__password">رمز عبور</string>
    <string name="login__not_a_member_join_now">ساخت حساب جدید</string>
    <string name="login__forgot_your_password">بازیابی رمز عبور</string>
    <string name="login__login">ورود</string>
    <string name="login__welcome_title">به اپلیکیشن فیروزبورد خوش آمدید</string>
    <string name="login__choice_text">یا</string>
    <string name="contact_us__name">نام</string>
    <string name="contact_us__email">ایمیل</string>
    <string name="contact_us__message">پیام شما</string>
    <string name="contact_us__phone">شماره تلفن</string>
    <string name="contact_us__submit">ارسال</string>
    <string name="notification_setting__on_off">فعال / غیر فعال کردن اعلانات</string>
    <string name="notification_setting__latest_message_from_system">آخرین پیام ها سیستم</string>
    <string name="notification__notification">اعلان!</string>
    <string name="notification_setting__title">تنظیمات اعلان</string>
    <string name="notification_detail__title">جزئیات اعلان</string>
    <string name="notification__alert">هشدار</string>
    <string name="notification__custom_alert">اعلان</string>
    <string name="notification__custom_open">باز کردن مورد</string>
    <string name="notification__title">اعلانات</string>
    <string name="language__english">انگلیسی</string>
    <string name="language__arabic">عربی</string>
    <string name="language__spanish">اسپانیایی</string>
    <string name="language__language_change">آیا میخواهید زبان اپلیکیشن را تغییر دهید؟</string>
    <string name="language__title">زبان</string>
    <string name="history__title">تاریخچه</string>
    <string name="title__activity_user_history_list">تاریخچه فعالیت کاربر</string>
    <string name="favourite__title">نشان شده ها</string>
    <string name="verify_phone">تایید شماره تلفن</string>
    <string name="fb_register__welcome">Welcome from %1$s </string>
    <string name="fb_register__desc">Please login to use all features of application.</string>
    <string name="gallery__title">گالری</string>
    <string name="gallery_image__gallery">تصویر گالری</string>
    <string name="gallery_img__desc">توضیحات تصویر</string>
    <string name="select__select_title">انتخاب تصویر</string>
    <string name="gallery__select_title">از گالری</string>
    <string name="camera__select_title">از دوربین</string>
    <string name="info__item_title">هشدار پلیس: لطفاً پیش از انجام معامله و هر نوع پرداخت وجه، از صحت کالا یا خدمات ارائه شده، به صورت حضوری اطمینان حاصل فرمایید.</string>
    <string name="info__item_call">تماس تلفنی با</string>
    <string name="info__item_sms">ارسال پیامک به</string>
    <string name="image_default__image">تصویر پیشفرض</string>
    <string name="comment__replies">-- %1$s پاسخ ها</string>
    <string name="comment__title">لیست نظرات</string>
    <string name="comment__detail_title">پاسخ ها به نظر</string>
    <string name="comment__empty_comment">نظری موجود نیست.</string>
    <string name="comment__comment">نظر</string>
    <string name="rating__list">لیست امتیاز</string>
    <string name="rating__write_review">نوشتن نظر</string>
    <string name="rating__total_count">%1$s نظرات مشتری</string>
    <string name="rating__total_value">%1$s از 5 ستاره</string>
    <string name="rating__percent">%1$s %%</string>
    <string name="rating__title">عنوان</string>
    <string name="rating__message">پیام</string>
    <string name="rating__user_rating">امتیاز کاربر را وارد نمایید!</string>
    <string name="rating__your_rating">امتیاز شما</string>
    <string name="rating__five_star">5 ستاره</string>
    <string name="rating__four_star">4 ستاره</string>
    <string name="rating__three_star">3 ستاره</string>
    <string name="rating__two_star">2 ستاره</string>
    <string name="rating__one_star">1 ستاره</string>
    <string name="rating__rating_range">رنج امتیاز دهی</string>
    <string name="rating__one">1 و بیشتر</string>
    <string name="rating__two">2 و بیشتر</string>
    <string name="rating__three">3 و بیشتر</string>
    <string name="rating__four">4 و بیشتر</string>
    <string name="rating__five">5 \n</string>
    <string name="rating__comar">","</string>
    <string name="dialog__title_m_mun">مرتب سازی بر اساس</string>
    <string name="popular__m_mun">محبوب</string>
    <string name="recent__m_mun">آخرین ها</string>
    <string name="char_asc__m_mun">A -> Z</string>
    <string name="char_desc__m_mun">Z -> A</string>
    <string name="edit_setting__notification_setting">تنظیمات اعلان</string>
    <string name="edit_setting__edit_profile">ویرایش پروفایل</string>
    <string name="edit_setting__logout">خروج از حساب</string>
    <string name="edit_setting__logout_question">آیا میخواهید از حساب خود خارج شوید؟</string>
    <string name="edit_setting__terms_and_conditions">شرایط و ضوابط</string>
    <string name="edit_setting__app_info">درباره اپلیکیشن</string>
    <string name="edit_setting__title">تنظیمات</string>
    <string name="message__register_success">ثبت نام با موفقیت انجام شد.</string>
    <string name="message__loading">بارگیری …</string>
    <string name="message__please_wait">لطفا صبر کنید …</string>
    <string name="message__welcome">به مارکت فیروزبورد خوش آمدید</string>
    <string name="message__want_to_quit">آیا میخواهید خارج شوید؟</string>
    <string name="message__ok_close">باشه</string>
    <string name="message__cancel_close">لغو</string>
    <string name="message__seller">از فروشندگان</string>
    <string name="message__buyer">از خریداران</string>
    <string name="message__login_success">شما با موفقیت وارد شدید.</string>
    <string name="search__notSet">وارد نشده</string>
    <string name="search__by_name">نام</string>
    <string name="search__by_type">نوع</string>
    <string name="search__by_sub_type">زیر شاخه</string>
    <string name="search__by_price">رنج قیمت</string>
    <string name="search__lowest_price">کمترین</string>
    <string name="search__highest_price">بیشترین</string>
    <string name="search__special_check">چک ویژه</string>
    <string name="search__feature">محصولات ویژه</string>
    <string name="search__discount_price">قیمت تخفیف دار</string>
    <string name="search__search">جستجو</string>
    <string name="sf__notSet">وارد نشده</string>
    <string name="sf__notSet_zg">وارد نشده</string>
    <string name="sf__ByItemType">عنوان آگهی</string>
    <string name="sf__ByPrice">Set Price</string>
    <string name="sf__Filter_Button">فیلتر</string>
    <string name="sf__Search_Button">جستجو</string>
    <string name="typefilter">Filtered By Product type</string>
    <string name="sf__deal_option">نوع معامله</string>
    <string name="sf__price_type">نوع قیمت</string>
    <string name="sf__item_conditio">نوع محصول</string>
    <string name="sf__type">نوع آگهی</string>
    <string name="error_message__select_location">لطفا موقعیت خود را انتخاب نمایید!</string>
    <string name="error_message__login_first">لطفا ابتدا وارد شوید!</string>
    <string name="error_message__rating">لطفا امتیاز را پر کنید.</string>
    <string name="error_message__blank_email">لطفا شماره موبایل را وارد نمایید.</string>
    <string name="error_message__blank_contact_message">لطفاً پیام خود را وارد نمایید.</string>
    <string name="error_message__blank_password">لطفا رمز عبور را وارد کنید.</string>
    <string name="error_message__blank_password_agian">رمز عبور مطابقت ندارد.</string>
    <string name="error_message__blank_name">لطفا نام را وارد نمایید.</string>
    <string name="error_message__blank_keyword">لطفا کلید واژه ای برای جستجو وارد کنید.</string>
    <string name="error_message__choose_category">لطفا اول دسته بندی را انتخاب نمایید</string>
    <string name="error_message__password_not_equal">رمز های عبور مطابقت ندارند!</string>
    <string name="error_message__no_internet">بدون اتصال به اینترنت.</string>
    <string name="error_message__email_exists">این شماره تلفن قبلا ثبت شده است!</string>
    <string name="error_message__image_cannot_upload">تصویر قابل آپلود نیست</string>
    <string name="error_message__item_cannot_upload">آگهی قابل ارسال نیست</string>
    <string name="error_message__code_not_verify">کد تایید شما معتبر نیست!</string>
    <string name="error_message__already_accept">کالای شما قبلاً فروخته شده است</string>
    <string name="success_message__sent_item">آگهی ارسال شد و پس از تایید نمایش داده میشود</string>
    <string name="Feature_UI_Type__Button">دسته بندی</string>
    <string name="Feature_UI_Tune__Button">فیلتر و مرتب سازی</string>
    <string name="Feature_UI_Sort__Button" translatable="false">فیلتر از روی نقشه</string>
    <string name="Feature_UI__item_list_no_item_title">بدون داده</string>
    <string name="Feature_UI__item_list_no_item_desc">نتیجه ای یافت نشده! لطفاً سعی کنید از فیلترها نیز کمک بگیرید.</string>
    <string name="Feature_UI__item_list_loading_item_title">ما در حال بارگیری هستیم</string>
    <string name="Feature_UI__search_alert_cat_title">انتخاب دسته بندی</string>
    <string name="Feature_UI__search_alert_sub_cat_title">انتخاب زیر شاخه</string>
    <string name="Feature_UI__search_alert_type_title">انتخاب نوع آگهی</string>
    <string name="Feature_UI__search_alert_price_type_title">انتخاب نوع قیمت</string>
    <string name="Feature_UI__search_alert_condition_title">انتخاب نوع محصول</string>
    <string name="Feature_UI__search_alert_location_title">انتخاب شهر مورد نظر</string>
    <string name="Feature_UI__search_alert_currency_title">انتخاب واحد پول</string>
    <string name="terms_regieter_text1">با کلیک بر روی ثبت نام شما قوانین و مقررات اپلیکیشن را قبول دارید :</string>
    <string name="terms_regieter_text2">قوانین و مقررات</string>
    <string name="menu__login">ورود / ثبت نام</string>
    <string name="chat__login_title">ارتباط آسان و سریع با فروشنده</string>
    <string name="chat__login_dec">برای شروع مکالمه جدید و یا دسترسی به مکالمات قبلی ، لازم است ابتدا وارد حساب خود شوید.</string>
</resources>