<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbarAlwaysDrawHorizontalTrack="false"
            android:scrollbarAlwaysDrawVerticalTrack="false">


            <ImageView
                android:id="@+id/bgImageView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:contentDescription="@string/image_default__image"
                android:scaleType="centerCrop"
                android:src="@drawable/login_app_bg"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayoutTerms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">

                <TextView
                    android:id="@+id/temstext21"
                    android:layout_width="0dp"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_12"
                    android:gravity="center"
                    android:text="@string/terms_regieter_text1"
                    android:textColor="@color/md_white_1000"
                    android:textSize="@dimen/font_body_size"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/TermsOpen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/space_2"
                    android:layout_marginTop="6dp"
                    android:padding="5dp"
                    android:layout_marginEnd="@dimen/space_2"
                    android:gravity="center"
                    android:background="?android:attr/selectableItemBackground"
                    android:text="@string/terms_regieter_text2"
                    android:textColor="@color/text__secondary"
                    android:textSize="@dimen/font_body_size"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/temstext21" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <Button
                android:id="@+id/registerButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@drawable/rounded_corner_shape_button_for_login"
                android:text="@string/register__register"
                android:textColor="@color/button__primary_text"
                app:layout_constraintEnd_toEndOf="@+id/constraintLayout2"
                app:layout_constraintStart_toStartOf="@+id/constraintLayout2"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayoutTerms" />

            <ImageView
                android:id="@+id/imageView19"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="30dp"
                android:contentDescription="@string/image_default__image"
                app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/ic_launcher" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout2"
                android:layout_width="312dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="100dp"
                android:background="@drawable/rounded_corner_shape_for_login"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <View
                    android:id="@+id/view25"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:background="@color/md_grey_300"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/nameEditText" />

                <EditText
                    android:id="@+id/nameEditText"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:background="@android:color/transparent"
                    android:drawableStart="@drawable/baseline_people_black_24"
                    android:drawablePadding="@dimen/space_16"
                    android:hint="@string/register__user_name"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:isScrollContainer="true"
                    android:lines="1"
                    android:maxLines="1"
                    android:paddingStart="@dimen/space_16"
                    android:paddingEnd="@dimen/space_16"
                    android:singleLine="true"
                    android:textColor="@color/text__primary"
                    app:font='@{"normal"}'
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:textSize='@{"edit_text"}' />

                <EditText
                    android:id="@+id/emailEditText"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:background="@android:color/transparent"
                    android:drawableStart="@drawable/baseline_mail"
                    android:drawablePadding="@dimen/space_16"
                    android:hint="@string/register__email"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:isScrollContainer="true"
                    android:lines="1"
                    android:maxLines="1"
                    android:paddingStart="@dimen/space_16"
                    android:paddingEnd="@dimen/space_16"
                    android:singleLine="true"
                    android:textColor="@color/text__primary"
                    app:font='@{"normal"}'
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/view25"
                    app:textSize='@{"edit_text"}' />

                <EditText
                    android:id="@+id/passwordEditText"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:background="@android:color/transparent"
                    android:drawableStart="@drawable/baseline_lock"
                    android:drawablePadding="@dimen/space_16"
                    android:hint="@string/register__password"
                    android:inputType="textPassword"
                    android:isScrollContainer="true"
                    android:lines="1"
                    android:maxLines="1"
                    android:paddingStart="@dimen/space_16"
                    android:paddingEnd="@dimen/space_16"
                    android:singleLine="true"
                    android:textColor="@color/text__primary"
                    app:font='@{"normal"}'
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view9"
                    app:textSize='@{"edit_text"}' />

                <View
                    android:id="@+id/view9"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:background="@color/md_grey_300"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/emailEditText" />


                <EditText
                    android:id="@+id/passwordagainEditText"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:background="@android:color/transparent"
                    android:drawableStart="@drawable/baseline_lock"
                    android:drawablePadding="@dimen/space_16"
                    android:hint="@string/register__password_again"
                    android:inputType="textPassword"
                    android:isScrollContainer="true"
                    android:lines="1"
                    android:maxLines="1"
                    android:paddingStart="@dimen/space_16"
                    android:paddingEnd="@dimen/space_16"
                    android:singleLine="true"
                    android:textColor="@color/text__primary"
                    app:font='@{"normal"}'
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view10"
                    app:textSize='@{"edit_text"}' />
                <View
                    android:id="@+id/view10"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:background="@color/md_grey_300"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/passwordEditText" />

            </androidx.constraintlayout.widget.ConstraintLayout>


            <Button
                android:id="@+id/loginButton"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:text="@string/register__back_to_login"
                android:textAllCaps="false"
                android:textColor="@color/text__secondary"
                app:font='@{"normal"}'
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/registerButton"
                app:textSize='@{"button_text"}'
                tools:text="@string/register__back_to_login" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</layout>
